# TerminalBackend

./: .env  .env.example  .gitignore  Dockerfile  Procfile  README.md  default_pairs.json  docker-compose.yml  pyproject.toml  requirements.txt
core/: __init__.py  authenticate.py  settings.py  urls.py
docker/: gunicorn.config.py  start_server.sh  start_server_production.sh
terminal_api/: apps.py  hey.py  models.py  serializers.py  tests.py  urls.py  views.py
terminal_api/migrations/: 0001_initial.py  0002_user_is_active_alter_user_address_and_more.py  0003_alter_userwallets_address_alter_userwallets_mnemonic_and_more.py  0004_pairinfo_remove_order_base_token_and_more.py  0005_alter_order_filled_at.py
terminal_api/utils/: address.py  client.py  dexapi.py  geckoapi.py  swap.py  test.py  tonapi.py  wallet.py
